# AntiNETWORK

./: .gitignore  README.md  environment.yml  pyproject.toml
docs/: GDPa3_FIREWALL.md
results/: README.md  descriptor_plm_internal_vs_external.csv  external_hic_baseline_distribution.csv  external_hic_vs_field_baselines.csv  external_vs_field_ceiling.csv  internal_vs_external_triage_comparison.csv  positive_control_summary.csv  scramble_diagnostics_summary.csv  tm2_structure_tier_summary.csv  topology_gate_verdicts.csv
scripts/: build_plm_embeddings.py  compute_deepsp.py  download_gdpa.py  knn_baseline_hic.py  plot_headline_collapse.py  plot_hic_vs_field_baselines.py  plot_tm2_subtype_residual.py  run_competitive_ranker.py  run_external_triage_audit.py  run_plm_ranker_audit.py  run_tm_structure_tier_audit.py  run_v11_descriptor_plm_stack_audit.py  score_external_prediction_triage.py
src/antinetwork/: __init__.py  competitive_ranker.py  features.py  gdpa.py  killtest.py  literature_anchors.py  official_benchmark.py  patchy_network.py  physics_attribution.py  plm_embeddings.py  profiler.py  structure_topology.py  topology_falsification.py
tests/: test_competitive_ranker.py  test_gdpa.py  test_killtest_features.py  test_literature_anchors.py  test_official_benchmark.py  test_patchy_network.py  test_physics_attribution.py  test_plm_embeddings.py  test_profiler.py  test_structure_topology.py  test_tm_structure_tier_audit.py  test_topology_falsification.py
